[FIX] old App name

--- a/template/src/containers/Router/Router.scss
+++ b/template/src/containers/Router/Router.scss
@@ -1,9 +1,5 @@
-.App {
+.Router {
   display: flex;
   min-width: 100vw;
   min-height: 100vh;
-
-  .content {
-    // justify-content: space-between;
-  }
 }
